--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "author": "Nguyen Minh Tuan <tnowad@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "4.15.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
     "nodemon": "^2.0.22",
+    "prisma": "^4.15.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
