--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "4.15.0",
-    "express": "^4.18.2"
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/morgan": "^1.9.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
