--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@prisma/client": "4.15.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
